--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,6 +15,7 @@
 @import "components/benefits";
 @import "components/tariffs";
 @import "components/destinationCountry";
+@import "components/regulations";
 
 
 @import "components/contacts";
