--- a/src/scss/components/_contacts.scss
+++ b/src/scss/components/_contacts.scss
@@ -1,10 +1,6 @@
 .contacts {
   @include block();
-  margin-top: 67px;
-
-  @media (max-width: $screen_md) {
-    margin-top: 30px;
-  }
+  @extend .mainIndentTop;
 
   &__block {
     @include flex();
