--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -64,3 +64,11 @@ h1, h2, h3, h4, h5, h6, p, form {
     padding-right: $side_mobile;
   }
 }
+
+.mainIndentTop {
+  padding-top: 67px;
+
+  @media (max-width: $screen_md) {
+    padding-top: 30px;
+  }
+}
