--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,6 +16,7 @@
 @import "components/tariffs";
 @import "components/destinationCountry";
 @import "components/regulations";
+@import "components/authorization";
 
 
 @import "components/contacts";
