--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,6 +17,7 @@
 @import "components/destinationCountry";
 @import "components/regulations";
 @import "components/authorization";
+@import "components/parcel";
 
 
 @import "components/contacts";
