--- a/src/scss/components/_elements.scss
+++ b/src/scss/components/_elements.scss
@@ -381,6 +381,17 @@
   }
 }
 
+.inputMultilevel {
+  @include flex();
+  margin: 0 -8px;
+
+  &__unit {
+    position: relative;
+    flex: 1;
+    padding: 0 8px;
+  }
+}
+
 .inputBox {
   @include block();
 
