Add Step 1-2 and new select

--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -16,7 +16,22 @@
       </div>
 
       <div class="header__col">
-        <a class="header__entrans" href="#">Войти</a>
+
+        @@if (authorization == 0) {
+          <a class="header__entrans" href="#">Войти</a>
+        }
+
+        @@if (authorization == 1) {
+          <div class="header__popup">
+            <span class="header__popup-title">example@mail.ru</span>
+            <ul class="header__popup-list">
+              <li><a class="header-ic-orders" href="#">Заказы</a></li>
+              <li><a class="header-ic-data" href="#">Личные данные</a></li>
+              <li><a class="header-ic-exit" href="#">Выйти</a></li>
+            </ul>
+          </div>
+        }
+
         <a class="button button--min" href="#">Оформить посылку</a>
       </div>
 
