--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,7 @@
 @import "components/main";
 
 @import "components/elements";
+@import "components/select";
 @import "components/header";
 
 @import "components/homeBox";
