--- a/src/scss/components/_parcel.scss
+++ b/src/scss/components/_parcel.scss
@@ -20,6 +20,7 @@
   }
 
   &__side {
+    $side: &;
     @include flex();
     width: 100%;
     max-width: 815px;
@@ -61,6 +62,23 @@
           padding: 0;
         }
       }
+    }
+
+    &-head {
+      @include block();
+      width: 100%;
+      margin-bottom: 36px;
+    }
+
+    &-unit {
+      position: relative;
+      width: 50%;
+    }
+
+    &--wide {
+      flex-wrap: wrap;
+      max-width: 1030px;
+      margin: 0;
     }
   }
 
@@ -160,12 +178,13 @@
   }
 
   &__approximatePrice {
+    $ap: &;
     @include block();
     min-width: 300px;
     border: 1px solid #67E17A;
     box-sizing: border-box;
     border-radius: 20px;
-    padding: 24px;
+    padding: 24px 24px 22px 24px;
 
     @media (max-width: $screen_md) {
       margin-top: 36px;
@@ -231,7 +250,7 @@
 
     &-info {
       @include flex();
-      margin-bottom: 4px;
+      margin-top: 4px;
       align-items: flex-end;
       justify-content: space-between;
       font-weight: 500;
@@ -254,6 +273,12 @@
       line-height: 16px;
       letter-spacing: 0.02em;
       color: #9296A0;
+    }
+
+    &--info {
+      #{$ap}-icon {
+        margin-bottom: 16px;
+      }
     }
   }
 
@@ -318,8 +343,10 @@
     position: relative;
     display: inline-flex;
     background-color: #F1F2F3;
-    border-radius: 8px;
-    margin-top: 12px;
+    border-radius: 10px;
+    margin-top: 10px;
+    padding: 2px;
+    user-select: none;
 
     li {
       position: relative;
@@ -330,19 +357,90 @@
       font-size: 14px;
       line-height: 18px;
       letter-spacing: 0.02em;
+      border-radius: 8px;
       cursor: pointer;
 
       &.active {
         background-color: #9E91FB;
-        border-radius: 8px;
         color: #fff;
       }
     }
   }
 
   &__points {
-    @include block();
-    margin-top: 36px;
+    position: absolute;
+    top: 0;
+    height: 0;
+    width: 100%;
+    overflow: hidden;
+    margin: 36px 0 16px 0;
+
+    &.active {
+      @include block();
+      top: auto;
+      height: auto;
+      overflow: visible;
+    }
+
+    @media (max-width: $screen_md) {
+      width: 100%;
+    }
+  }
+
+  &__courier {
+    position: absolute;
+    top: 0;
+    height: 0;
+    width: 100%;
+    overflow: hidden;
+    margin: 10px 0 16px 0;
+
+    &.active {
+      @include block();
+      top: auto;
+      height: auto;
+      overflow: visible;
+    }
+
+    &-info {
+      @include block();
+
+      p {
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 16px;
+        letter-spacing: 0.02em;
+        color: #9296A0;
+      }
+    }
+
+    &-block {
+      @include flex();
+      max-width: 372px;
+      margin: 10px -8px 0 -8px;
+
+      @media (max-width: $screen_xs) {
+        display: block;
+        max-width: 183px;
+        margin: 10px 0 0 0;
+      }
+    }
+
+    &-box {
+      @include flex();
+      flex: 1;
+      flex-direction: column;
+      margin: 0 8px;
+
+      @media (max-width: $screen_xs) {
+        display: block;
+        margin: 0;
+
+        &:not(:last-child) {
+          margin-bottom: 16px;
+        }
+      }
+    }
   }
 
   &__pointsList {
@@ -352,8 +450,14 @@
 
     &-box {
       @include flex();
+      justify-content: space-between;
       border-bottom: 1px solid #E4E4E7;
-      padding: 16px;
+      padding: 15px 16px;
+
+      @media (max-width: $screen_xs) {
+        flex-direction: column;
+        justify-content: flex-start;
+      }
     }
 
     &-side {
@@ -361,6 +465,10 @@
 
       &:nth-child(2) {
         padding-left: 24px;
+
+        @media (max-width: $screen_xs) {
+          padding: 8px 0 0 0;
+        }
       }
     }
 
@@ -436,9 +544,35 @@
   }
 
   &__pointsMap {
+    @include block();
+
+    &-block {
+      @include flex();
+      justify-content: space-between;
+      border: 1px solid #E4E4E7;
+      border-radius: 10px;
+      padding: 16px;
+
+      @media (max-width: $screen_md) {
+        display: block;
+      }
+    }
 
     &-side {
+      @include flex();
+      flex-direction: column;
 
+      @media (max-width: $screen_md) {
+        display: block;
+      }
+
+      &:nth-child(2) {
+        padding-left: 20px;
+
+        @media (max-width: $screen_md) {
+          padding: 16px 0 0 0;
+        }
+      }
     }
 
     &-text {
@@ -456,6 +590,57 @@
         line-height: 18px;
         letter-spacing: 0.02em;
       }
+    }
+
+    &-list {
+      @include flex();
+      flex-wrap: wrap;
+      margin-top: 8px;
+
+      li {
+        @include inline_block();
+        font-size: 14px;
+        line-height: 18px;
+        letter-spacing: 0.02em;
+        color: #9296A0;
+
+        &:not(:last-child) {
+          margin-right: 4px;
+
+          &:after {
+            @include inline_block();
+            font-size: inherit;
+            line-height: inherit;
+            letter-spacing: inherit;
+            color: inherit;
+            content: ',';
+          }
+        }
+      }
+    }
+
+    &-cont {
+      @include block();
+      width: 120px;
+      height: 120px;
+
+      @media (max-width: $screen_md) {
+        width: 100%;
+      }
+
+      img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    &-button {
+      @include block();
+      margin-top: 10px;
     }
   }
   
@@ -477,6 +662,46 @@
 
       .button {
         width: 100%;
+      }
+    }
+  }
+
+  &__informer {
+    @include block();
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 18px;
+    letter-spacing: 0.02em;
+    border: 1px solid transparent;
+    border-radius: 20px;
+    padding: 24px;
+    margin-top: 36px;
+
+    &--green {
+      border-color: #67E17A;
+    }
+  }
+
+  &__dataInfo {
+    @include block();
+    max-width: 450px;
+
+    h2 {
+      margin-bottom: 10px;
+      font-weight: 600;
+      font-size: 24px;
+      line-height: 30px;
+      letter-spacing: 0.02em;
+    }
+
+    ul {
+      @include block();
+
+      li {
+        @include block();
+        font-size: 14px;
+        line-height: 18px;
+        letter-spacing: 0.02em;
       }
     }
   }
