Fix images paths

--- a/src/scss/components/_select.scss
+++ b/src/scss/components/_select.scss
@@ -218,84 +218,84 @@
 /* flag ---------------------------------------------------------- */
 .flag-ua {
   &:before, &:after {
-    background-image: url('../../img/flags/ua.svg');
+    background-image: url('../img/flags/ua.svg');
   }
 
   .jq-selectbox__select {
     &:before, &:after {
-      background-image: url('../../img/flags/ua.svg');
+      background-image: url('../img/flags/ua.svg');
     }
   }
 }
 
 .flag-az {
   &:before, &:after {
-    background-image: url('../../img/flags/az.svg');
+    background-image: url('../img/flags/az.svg');
   }
 
   .jq-selectbox__select {
     &:before, &:after {
-      background-image: url('../../img/flags/az.svg');
+      background-image: url('../img/flags/az.svg');
     }
   }
 }
 
 .flag-kz {
   &:before, &:after {
-    background-image: url('../../img/flags/kz.svg');
+    background-image: url('../img/flags/kz.svg');
   }
 
   .jq-selectbox__select {
     &:before, &:after {
-      background-image: url('../../img/flags/kz.svg');
+      background-image: url('../img/flags/kz.svg');
     }
   }
 }
 
 .flag-pt {
   &:before, &:after {
-    background-image: url('../../img/flags/pt.svg');
+    background-image: url('../img/flags/pt.svg');
   }
 
   .jq-selectbox__select {
     &:before, &:after {
-      background-image: url('../../img/flags/pt.svg');
+      background-image: url('../img/flags/pt.svg');
     }
   }
 }
 
 .flag-uz {
   &:before, &:after {
-    background-image: url('../../img/flags/uz.svg');
+    background-image: url('../img/flags/uz.svg');
   }
 
   .jq-selectbox__select {
     &:before, &:after {
-      background-image: url('../../img/flags/uz.svg');
+      background-image: url('../img/flags/uz.svg');
     }
   }
 }
 
 .flag-kg {
   &:before, &:after {
-    background-image: url('../../img/flags/kg.svg');
+    background-image: url('../img/flags/kg.svg');
   }
 
   .jq-selectbox__select {
     &:before, &:after {
-      background-image: url('../../img/flags/kg.svg');
+      background-image: url('../img/flags/kg.svg');
     }
   }
 }
 
 .flag-by {
   &:before, &:after {
-    background-image: url('../../img/flags/by.svg');
+    background-image: url('../img/flags/by.svg');
   }
 
   .jq-selectbox__select {
     &:before, &:after {
-      background-image: url('../../img/flags/by.svg');
+      background-image: url('../img/flags/by.svg');
     }
   }
 }
